fixing raceSelector alignment

--- a/traffic_stops/static/less/index.less
+++ b/traffic_stops/static/less/index.less
@@ -646,6 +646,11 @@ nav.graphs-nav {
 
   .raceSelector {
     display: inline-block;
+    float: right;
+
+    @media (max-width: 768px) {
+      float: none;
+    }
   }
 }
 
